# csg_playground

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLIBIGL.cmake
include/: c.h  cit.h  cluster.h  collision.h  congraph.h  constants.h  csgnode.h  csgnode_evo.h  csgnode_evo_v2.h  csgnode_generator.h  csgnode_helper.h  csgtree.h  curvature.h  dbscan.h  dnf.h  evolution.h  helper.h  mesh.h  optimizer.cpp  optimizer_clustering.h  optimizer_ga.h  optimizer_pipeline_runner.h  optimizer_py.h  optimizer_qa.h  optimizer_red.h  optimizer_test.h  params.h  pc_structure.h  point_vis.h  pointcloud.h  polytope_extraction.h  prim_select_ga.h  primitive_extraction.h  primitive_helper.h  primitives.h  ransac.h  red_inserter.h  statistics.h  test.h  tests.h
ini/: default.ini  simple.ini
scripts/: connectionGraph.dot  csg_run_script.py  plot.py  plot_js.py
scripts/spectral_clustering/: clustering.py  main.py  main_vischeck.py  requirements.txt
src/: c.cpp  cit.cpp  cluster.cpp  collision.cpp  congraph.cpp  csgnode.cpp  csgnode_evo.cpp  csgnode_evo_v2.cpp  csgnode_helper.cpp  csgtree.cpp  curvature.cpp  dbscan.cpp  dnf.cpp  evolution.cpp  helper.cpp  main.cpp  main_csg.cpp  main_inf.cpp  main_primgen.cpp  main_sampling.cpp  main_wscg18.cpp  mesh.cpp  optimizer_clustering.cpp  optimizer_ga.cpp  optimizer_pipeline_runner.cpp  optimizer_py.cpp  optimizer_qa.cpp  optimizer_red.cpp  params.cpp  pc_structure.cpp  point_vis.cpp  pointcloud.cpp  polytope_extraction.cpp  prim_select_ga.cpp  primitive_extraction.cpp  primitive_helper.cpp  primitives.cpp  ransac.cpp  red_inserter.cpp  statistics.cpp  (+1 more)
